corpus/amounts_comprehensive.txt
==================
Integer quantity
==================

@ingredient{5}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)))))

==================
Decimal quantity
==================

@ingredient{2.5}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)))))

==================
Fraction quantity
==================

@ingredient{1/2}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)))))

==================
Fraction with spaces
==================

@ingredient{1 / 3}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)))))

==================
Quantity with unit
==================

@ingredient{250%ml}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units)))))

==================
Quantity with multiword unit
==================

@ingredient{2%fl oz}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units)))))

==================
Zero quantity
==================

@ingredient{0}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)))))

==================
Large quantity
==================

@ingredient{1000%g}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units)))))

==================
Mixed fraction quantity
==================

@ingredient{1 1/2%cups}

---

(recipe
  (step
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units)))))
