corpus/metadata_comprehensive.txt
==================
Simple metadata
==================

>> servings: 4

---

(recipe
  (metadata))

==================
Metadata with number value
==================

>> cook time: 30

---

(recipe
  (metadata))

==================
Metadata with text value
==================

>> difficulty: easy

---

(recipe
  (metadata))

==================
Metadata with amount value
==================

>> calories: 250%kcal

---

(recipe
  (metadata))

==================
Multiple metadata entries
==================

>> servings: 6
>> prep time: 15
>> cook time: 45

---

(recipe
  (metadata)
  (metadata)
  (metadata))

==================
Metadata mixed with content
==================

>> source: Grandma's cookbook

= Main Recipe

Cook the dish.

>> leftovers: Keep refrigerated for 3 days

---

(recipe
  (metadata)
  (section
    header: (section_header
      name: )
    content: (step
      (plain_text)))
  (metadata))
