corpus/note
=============
Simple Note
=============

> Don't burn the roux!

---

(recipe (note))

===================
Note with Step
===================

> Don't burn the roux!
Mash @potato{2%kg} until smooth.

---

(recipe 
  (note)
  (step (ingredient (name) (amount (quantity) (units)))))

=========================
Multiple Notes
=========================

> This is the first note.
> This is the second note.
Prepare the ingredients.

---

(recipe 
  (note)
  (note)
  (step))

================================
Note with Special Characters
================================

> Remember: use 50% less salt!

---

(recipe (note))

================================
Empty Note
================================

>

---

(recipe (note))
