corpus/steps_comprehensive.txt
==================
Single line step
==================

Mix all ingredients together.

---

(recipe
  (step
    (plain_text)))

==================
Multi-line step
==================

A step that continues
on multiple lines without
any empty lines between.

---

(recipe
  (step
    (plain_text)))

==================
Multiple steps separated by empty line
==================

First step here.

Second step starts after empty line.

---

(recipe
  (step
    (plain_text))
  (step
    (plain_text)))

==================
Steps with ingredients and cookware
==================

Heat #pan{} with @oil{2%tbsp}.

Add @onions{2}(diced) and cook ~{5%minutes}.

---

(recipe
  (step
    (plain_text)
    (cookware
      name: (cookware_text))
    (plain_text)
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units))))
  (step
    (plain_text)
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity))
      note: )
    (plain_text)
    (timer
      (amount
        (quantity)
        (units)))))

==================
Complex step with all elements
==================

In a #large pot{}, combine @water{2%L}, @salt{1%tsp}, and heat for ~{10%minutes} -- don't let it boil over!

---

(recipe
  (step
    (plain_text)
    (cookware
      name: (cookware_text))
    (plain_text)
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units)))
    (plain_text)
    (ingredient
      name: (ingredient_text)
      (amount
        (quantity)
        (units)))
    (plain_text)
    (timer
      (amount
        (quantity)
        (units)))
    (plain_text)
    (comment)))
