corpus/timers_comprehensive.txt
==================
Anonymous timer
==================

~{25%minutes}

---

(recipe
  (step
    (timer
      (amount
        (quantity)
        (units)))))

==================
Named timer
==================

~eggs{3%minutes}

---

(recipe
  (step
    (timer
      name: (timer_text)
      (amount
        (quantity)
        (units)))))

==================
Timer with note
==================

~{10%minutes}(or until golden brown)

---

(recipe
  (step
    (timer
      (amount
        (quantity)
        (units))
      note: )))

==================
Named timer with note
==================

~rest{30%minutes}(covered)

---

(recipe
  (step
    (timer
      name: (timer_text)
      (amount
        (quantity)
        (units))
      note: )))

==================
Timer with hours
==================

~marinate{2%hours}

---

(recipe
  (step
    (timer
      name: (timer_text)
      (amount
        (quantity)
        (units)))))

==================
Multiple timers in step
==================

Cook for ~{5%minutes}, then simmer ~{20%minutes}

---

(recipe
  (step
    (plain_text)
    (timer
      (amount
        (quantity)
        (units)))
    (plain_text)
    (timer
      (amount
        (quantity)
        (units)))))

==================
Timer with decimal time
==================

~{1.5%hours}

---

(recipe
  (step
    (timer
      (amount
        (quantity)
        (units)))))